crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__predicates__select_where_album_id_less_than.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": []
  }
]
