crates/tests/other-db-tests/src/postgres/snapshots/other_db_tests__postgres__query_tests__predicates__select_where_name_iregex.snap
---
source: crates/tests/other-db-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
